feat: EC2 배포 환경 구성
- SecurityConfig: CORS 허용 오리진을 환경변수(CORS_ALLOWED_ORIGINS)로 분리
- application.yaml: cors.allowed-origins 설정 추가
- LoginModal: 하드코딩된 localhost OAuth redirect URL을 env 변수로 교체
- next.config.ts: standalone 빌드 모드 활성화 (Docker 배포용)
- Dockerfile: 백엔드(Spring Boot), 프론트엔드(Next.js) 추가
- docker-compose.yml: DB/백엔드/프론트 통합 컨테이너 구성
- nginx/hanunan.conf: SSE·WebSocket 지원 포함 리버스 프록시 설정
- .env.example: 백엔드/프론트 환경변수 템플릿 추가
- .gitignore: .env 파일 제외 규칙 보강

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>